// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SupportPage should render empty main support page 1`] = `
<div>
  <div>
    <div
      class="bg-theme-neutral-100"
    >
      <div
        class="px-13 py-16 mb-5 bg-white"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 text-3xl font-bold md:text-4xl"
              data-testid="header__title"
            >
              Help & Support
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Do you need any help? Find it in our archive or write to us
            </div>
          </div>
          <div>
            <button
              class="sc-AxjAm ddQVWI"
              color="primary"
              type="button"
            >
              Contact us
            </button>
          </div>
        </div>
      </div>
      <div
        class="p-13 mb-5 bg-white"
      >
        <div
          class="flex flex-row"
        />
      </div>
      <div
        class="px-14 py-10 mb-10 bg-white"
      >
        <div
          class="flex flex-row"
        >
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Most Helpful
            </h2>
            <ul />
          </div>
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Most Popular
            </h2>
            <ul />
          </div>
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Newest
            </h2>
            <ul />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SupportPage should render main support page with categories 1`] = `
<div>
  <div>
    <div
      class="bg-theme-neutral-100"
    >
      <div
        class="px-13 py-16 mb-5 bg-white"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 text-3xl font-bold md:text-4xl"
              data-testid="header__title"
            >
              Help & Support
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Do you need any help? Find it in our archive or write to us
            </div>
          </div>
          <div>
            <button
              class="sc-AxjAm ddQVWI"
              color="primary"
              type="button"
            >
              Contact us
            </button>
          </div>
        </div>
      </div>
      <div
        class="p-13 mb-5 bg-white"
      >
        <div
          class="flex flex-row"
        >
          <a
            class="border-r-1 last:border-r-0 border-theme-neutral-200 flex flex-row w-64 cursor-pointer"
            title="Profile"
          >
            <div
              class="px-7 hover:shadow-xl flex flex-row w-full p-5 mx-2 bg-white rounded-md"
            >
              <div
                class="w-2/5 my-auto"
              >
                <div
                  class="sc-AxirZ cZokSJ border-theme-neutral-800"
                >
                  <div
                    class="text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        profile.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex-auto my-auto"
              >
                <div
                  class="text-theme-neutral-800 font-bold"
                >
                  Profile
                </div>
                <div
                  class="text-theme-neutral-500 text-sm"
                >
                  38 topics
                </div>
              </div>
            </div>
          </a>
          <a
            class="border-r-1 last:border-r-0 border-theme-neutral-200 flex flex-row w-64 cursor-pointer"
            title="Portfolio"
          >
            <div
              class="px-7 hover:shadow-xl flex flex-row w-full p-5 mx-2 bg-white rounded-md"
            >
              <div
                class="w-2/5 my-auto"
              >
                <div
                  class="sc-AxirZ cZokSJ border-theme-neutral-800"
                >
                  <div
                    class="text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        portfolio.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex-auto my-auto"
              >
                <div
                  class="text-theme-neutral-800 font-bold"
                >
                  Portfolio
                </div>
                <div
                  class="text-theme-neutral-500 text-sm"
                >
                  9 topics
                </div>
              </div>
            </div>
          </a>
          <a
            class="border-r-1 last:border-r-0 border-theme-neutral-200 flex flex-row w-64 cursor-pointer"
            title="Plugins"
          >
            <div
              class="px-7 hover:shadow-xl flex flex-row w-full p-5 mx-2 bg-white rounded-md"
            >
              <div
                class="w-2/5 my-auto"
              >
                <div
                  class="sc-AxirZ cZokSJ border-theme-neutral-800"
                >
                  <div
                    class="text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        plugins.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex-auto my-auto"
              >
                <div
                  class="text-theme-neutral-800 font-bold"
                >
                  Plugins
                </div>
                <div
                  class="text-theme-neutral-500 text-sm"
                >
                  106 topics
                </div>
              </div>
            </div>
          </a>
          <a
            class="border-r-1 last:border-r-0 border-theme-neutral-200 flex flex-row w-64 cursor-pointer"
            title="Exchanges"
          >
            <div
              class="px-7 hover:shadow-xl flex flex-row w-full p-5 mx-2 bg-white rounded-md"
            >
              <div
                class="w-2/5 my-auto"
              >
                <div
                  class="sc-AxirZ cZokSJ border-theme-neutral-800"
                >
                  <div
                    class="text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        exchange.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex-auto my-auto"
              >
                <div
                  class="text-theme-neutral-800 font-bold"
                >
                  Exchanges
                </div>
                <div
                  class="text-theme-neutral-500 text-sm"
                >
                  28 topics
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
      <div
        class="px-14 py-10 mb-10 bg-white"
      >
        <div
          class="flex flex-row"
        >
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Most Helpful
            </h2>
            <ul />
          </div>
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Most Popular
            </h2>
            <ul />
          </div>
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Newest
            </h2>
            <ul />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SupportPage should render main support page with helpful articles 1`] = `
<div>
  <div>
    <div
      class="bg-theme-neutral-100"
    >
      <div
        class="px-13 py-16 mb-5 bg-white"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 text-3xl font-bold md:text-4xl"
              data-testid="header__title"
            >
              Help & Support
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Do you need any help? Find it in our archive or write to us
            </div>
          </div>
          <div>
            <button
              class="sc-AxjAm ddQVWI"
              color="primary"
              type="button"
            >
              Contact us
            </button>
          </div>
        </div>
      </div>
      <div
        class="p-13 mb-5 bg-white"
      >
        <div
          class="flex flex-row"
        />
      </div>
      <div
        class="px-14 py-10 mb-10 bg-white"
      >
        <div
          class="flex flex-row"
        >
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Most Helpful
            </h2>
            <ul>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="How to register an account?"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    How to register an account?
                  </div>
                </a>
              </li>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="How to enter your account"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    How to enter your account
                  </div>
                </a>
              </li>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="How can I change my personal data if I do not have access to my account (forgot my password) and to my mail?"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    How can I change my personal data if I do not have access to my account (forgot my password) and to my mail?
                  </div>
                </a>
              </li>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="If you need to make changes to the data entered during the passage of verification, where to apply, how to issue a request?"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    If you need to make changes to the data entered during the passage of verification, where to apply, how to issue a request?
                  </div>
                </a>
              </li>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="Can I delete my account"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    Can I delete my account
                  </div>
                </a>
              </li>
            </ul>
          </div>
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Most Popular
            </h2>
            <ul />
          </div>
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Newest
            </h2>
            <ul />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SupportPage should render main support page with newest articles 1`] = `
<div>
  <div>
    <div
      class="bg-theme-neutral-100"
    >
      <div
        class="px-13 py-16 mb-5 bg-white"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 text-3xl font-bold md:text-4xl"
              data-testid="header__title"
            >
              Help & Support
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Do you need any help? Find it in our archive or write to us
            </div>
          </div>
          <div>
            <button
              class="sc-AxjAm ddQVWI"
              color="primary"
              type="button"
            >
              Contact us
            </button>
          </div>
        </div>
      </div>
      <div
        class="p-13 mb-5 bg-white"
      >
        <div
          class="flex flex-row"
        />
      </div>
      <div
        class="px-14 py-10 mb-10 bg-white"
      >
        <div
          class="flex flex-row"
        >
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Most Helpful
            </h2>
            <ul />
          </div>
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Most Popular
            </h2>
            <ul />
          </div>
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Newest
            </h2>
            <ul>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="How to withdraw from wallet"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    How to withdraw from wallet
                  </div>
                </a>
              </li>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="How to Make Internal Transfer within wallet"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    How to Make Internal Transfer within wallet
                  </div>
                </a>
              </li>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="Missing Withdrawals"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    Missing Withdrawals
                  </div>
                </a>
              </li>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="Withdrawal to a Wrong Address"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    Withdrawal to a Wrong Address
                  </div>
                </a>
              </li>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="How to Resume the Withdrawal Function"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    How to Resume the Withdrawal Function
                  </div>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SupportPage should render main support page with popular articles 1`] = `
<div>
  <div>
    <div
      class="bg-theme-neutral-100"
    >
      <div
        class="px-13 py-16 mb-5 bg-white"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 text-3xl font-bold md:text-4xl"
              data-testid="header__title"
            >
              Help & Support
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Do you need any help? Find it in our archive or write to us
            </div>
          </div>
          <div>
            <button
              class="sc-AxjAm ddQVWI"
              color="primary"
              type="button"
            >
              Contact us
            </button>
          </div>
        </div>
      </div>
      <div
        class="p-13 mb-5 bg-white"
      >
        <div
          class="flex flex-row"
        />
      </div>
      <div
        class="px-14 py-10 mb-10 bg-white"
      >
        <div
          class="flex flex-row"
        >
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Most Helpful
            </h2>
            <ul />
          </div>
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Most Popular
            </h2>
            <ul>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="How to delete YubiKey for Two-factor Authentication (2FA)"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    How to delete YubiKey for Two-factor Authentication (2FA)
                  </div>
                </a>
              </li>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="Using a YubiKey for Two-Factor Authentication (2FA)"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    Using a YubiKey for Two-Factor Authentication (2FA)
                  </div>
                </a>
              </li>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="2FA Code Error"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    2FA Code Error
                  </div>
                </a>
              </li>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="How to Reset SMS Authentication"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    How to Reset SMS Authentication
                  </div>
                </a>
              </li>
              <li
                class="border-b-1 border-theme-neutral-300 last:border-b-0 border-dotted cursor-pointer"
              >
                <a
                  class="border-3 border-theme-background hover:bg-theme-neutral-100 text-theme-neutral-800 hover:text-theme-primary-600 flex px-2 py-4 -mx-3 rounded-md"
                  href="/"
                  title="Supported SMS countries Not Receiving SMS Auth Codes"
                >
                  <div>
                    <div
                      class="text-theme-neutral-800 pt-1"
                    >
                      <div
                        class="sc-AxiKw bctdez"
                        height="16"
                        width="16"
                      >
                        <svg>
                          article.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ml-3"
                  >
                    Supported SMS countries Not Receiving SMS Auth Codes
                  </div>
                </a>
              </li>
            </ul>
          </div>
          <div
            class="w-1/3 mr-10"
          >
            <h2>
              Newest
            </h2>
            <ul />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
